# deep

./: .gitignore  CMakeLists.txt  config.h.in
GP/: CMakeLists.txt
GP/include/: GaussianProcess.h  IKernel.h  SquaredExponentialKernel.h
GP/src/: GaussianProcess.cpp  IKernel.cpp  SquaredExponentialKernel.cpp
cdeedle/: CMakeLists.txt
cdeedle/include/: Frame.h  Node.h  NodeAlgorithms.h  Tree.h
cdeedle/src/: Frame.cpp  Node.cpp
dataframework/: CMakeLists.txt
dataframework/include/data/: Frame.h  NumericDefaults.h  Series.h
dataframework/include/hierarchy/: Node.h  NodeAlgorithms.h
dataframework/src/data/: NumericDefaults.cpp
dataframework/src/hierarchy/: Node.cpp
include/decisiontrees/: NodeAlgorithms.h
random_forest/: CMakeLists.txt
random_forest/include/decisiontrees/: Node.h  NodeAlgorithms.h
random_forest/src/decisiontrees/: Node.cpp
src/: main.cpp
src/decisiontrees/: Node.cpp
tests/: CMakeLists.txt  FrameTests.cpp  KernelTests.cpp  NodeTests.cpp  SeriesTests.cpp  main.cpp  random_forest.cpp
